<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.Recharges">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondoblanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:gravity="top"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/rechargetitle"
            android:hint="@string/recharge"
            android:textSize="25sp"
            android:gravity="center"
            android:inputType="text" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recharges_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone"
                android:inputType="phone" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recharges_confirm_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmphone"
                android:inputType="phone" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recharge_text_amount"
                android:hint="@string/textamount"
                android:textSize="12sp"
                android:gravity="center"
                android:inputType="text" />

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recharges_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/amount"
                android:inputType="number" />
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/recharges_confirm_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/confirmamount"
                android:inputType="number" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="30sp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recharge_text_operator"
                android:hint="@string/textoperator"
                android:textSize="12sp"
                android:gravity="center"
                android:inputType="text" />

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/recharge_operator_spinner"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30sp"
            android:gravity="center_horizontal">

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/confirm_recharge_submit"
                android:backgroundTint="@color/black"
                android:text="@string/confirmrecharge" />
        </LinearLayout>

    </LinearLayout>

</RelativeLayout>
