<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenuActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        app:srcCompat="@drawable/fondoblanco" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50sp"
        android:layout_marginBottom="50sp"
        android:layout_marginRight="40sp"
        android:layout_marginLeft="40sp"
        android:gravity="top"
        android:orientation="vertical">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/mainmenutitle"
            android:hint="@string/mainmenu"
            android:textSize="25sp"
            android:gravity="center"
            android:inputType="text" />

        <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="60sp"
        android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewiconrecharge"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/rechargeicon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/recharge_submit"
                android:backgroundTint="@color/black"
                android:text="@string/recharge" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_marginTop="60sp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageViewiconexit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="center"
                app:srcCompat="@drawable/exiticon" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/exit_submit"
                android:backgroundTint="@color/black"
                android:text="@string/exit" />

        </LinearLayout>




    </LinearLayout>

</RelativeLayout>